--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Freedom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="main.css">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Julius+Sans+One" rel="stylesheet">
 </head>
 <body>
-
+    <h1>"The freedom of Mankind does not lie in the fact that<br /> we can do what we want, but that we do not have to<br /> do that which we do not want."</h1>
+    <h5>– Jean-Jacques Rousseau</h5>
 </body>
 </html>
